--- a/templates/master.html
+++ b/templates/master.html
@@ -52,22 +52,28 @@ drawerOptions=[]
     <div class="navbar" data-role="header">
       <div class="navbar-inner">
     
-    <!--built in TG nav bar (auth needs to be kept for TG)
+    <!-- built in TG nav bar (auth needs to be kept for TG) -->
         <div class="container">
-          <a class="brand" href="#"><img src="${tg.url('/images/turbogears_logo.png')}" alt="TurboGears 2"/> ${getattr(tmpl_context, 'project_name', 'turbogears2')}</a>
+          <a class="brand" href="#"><img src="${tg.url('/images/turbogears_logo.png')}" alt="TurboGears 2"/> ${getattr(tmpl_context, 'GameOn', 'GameOn')}</a>
           <ul class="nav nav-pills">
-            <li class="${('', 'active')[defined('page') and page=='index']}"><a href="${tg.url('/')}">Welcome</a></li>
+            <li class="${('', 'active')[defined('page') and page=='home']}"><a href="${tg.url('/')}">Home</a></li>
             <li class="${('', 'active')[defined('page') and page=='about']}"><a href="${tg.url('/about')}">About</a></li>
-            <li class="${('', 'active')[defined('page') and page=='data']}"><a href="${tg.url('/data')}">Serving Data</a></li>
-            <li class="${('', 'active')[defined('page') and page=='environ']}"><a href="${tg.url('/environ')}">WSGI Environment</a></li>
           </ul>
+          
+          <!-- My attempt at getting wrapping to work 
+          <ul class="todo" style="white-space:nowrap">
+            <li style="display:inline"><a href="${tg.url('/')}">Home</a></li>
+            <li style="display:inline"><a href="${tg.url('/about')}">About</a></li>
+          </ul>
+           -->
+          
+          
           <ul class="nav pull-right" py:if="tg.auth_stack_enabled">
             <li py:if="not request.identity"><a href="${tg.url('/login')}">Login</a></li>
             <li py:if="request.identity"><a href="${tg.url('/logout_handler')}">Logout</a></li>
             <li py:if="request.identity"><a href="${tg.url('/admin')}">Admin</a></li>
           </ul>
         </div>
-    -->
       </div>
           <!-- TODO UNCOMMENT WHEN JQUERY MOBILE WORKING AGAIN - hiding description and button
           <h1>Swipe left or right</h1>
@@ -98,7 +104,7 @@ drawerOptions=[]
     <!-- Footer included from an external template -->
     <footer class="footer hidden-tablet hidden-phone" data-role="footer">
     <a class="pull-right" href="http://www.turbogears.org/2.2/"><img style="vertical-align:middle;" src="${tg.url('/images/under_the_hood_blue.png')}" alt="TurboGears 2" /></a>
-    <p>Copyright &copy; ${getattr(tmpl_context, 'project_name', 'GameOn')} ${h.current_year()}</p>
+    <p>Copyright &copy; ${getattr(tmpl_context, 'GameOn', 'GameOn')} ${h.current_year()}</p>
     </footer>
     
     </div>
