--- a/res/layout/editable_row_item.xml
+++ b/res/layout/editable_row_item.xml
@@ -3,22 +3,19 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content" >
 	<TextView 
-		android:id="@+id/etGameName"
+		android:id="@+id/etTitle"
 		android:layout_width="wrap_content" 
 		android:layout_height="wrap_content" 
 		android:layout_weight="1"
 	/>
-	<!--Not currently supported... no way to carry the score over
-		at the moment
-	-->
-	<!--<Button
+	<Button
 		android:id="@+id/btnEdit"
 		android:text="Edit"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_toRightOf="@+id/etGameName"
 	/>
-	-->
+
 	<Button
 		android:id="@+id/btnRemove"
 		android:text="Remove"
