--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -2,17 +2,25 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-	>
+>
     <Button
 		android:id="@+id/addGameBtn"
 		android:text="Add new game session"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 	/>
+	<!--TODO don't actually use a button, launch the activity from some other means-->
+    <Button
+		android:id="@+id/mngPlyrsBtn"
+		android:text="Manage Players"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+		android:layout_below="@+id/addGameBtn"
+	/>
 	<ListView
 		android:id="@+id/android:list"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_below="@+id/addGameBtn"
+		android:layout_below="@+id/mngPlyrsBtn"
 	/>
 </RelativeLayout>
