--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -17,10 +17,17 @@
         android:layout_height="wrap_content"
 		android:layout_below="@+id/addGameBtn"
 	/>
+    <Button
+		android:id="@+id/mngDiceBtn"
+		android:text="Manage Dice"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+		android:layout_below="@+id/mngPlyrsBtn"
+	/>
 	<ListView
 		android:id="@+id/android:list"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_below="@+id/mngPlyrsBtn"
+		android:layout_below="@+id/mngDiceBtn"
 	/>
 </RelativeLayout>
