Completed dice functionality. Like other datastore objects, delete functionality has not been completed as of yet.

--- a/res/layout/new_dice.xml
+++ b/res/layout/new_dice.xml
@@ -11,7 +11,7 @@
 			android:layout_weight="0"
 		/>
 		<EditText 
-			android:id="@+id/editText" 
+			android:id="@+id/etDiceName" 
 			android:layout_width="0dp" 
 			android:layout_height="wrap_content" 
 			android:layout_weight="1"
