--- a/res/layout/manage_model.xml
+++ b/res/layout/manage_model.xml
@@ -5,12 +5,12 @@
 >
     <Button
 		android:id="@+id/addBtn"
-		android:text="Add"
+		android:text="@string/add_model_button_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 	/>	
 	<ListView
-		android:id="@+id/android:list"
+		android:id="@android:id/list"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_below="@+id/addBtn"
