--- a/res/layout/simple_list_view.xml
+++ b/res/layout/simple_list_view.xml
@@ -3,8 +3,13 @@
     android:layout_height="fill_parent"
 >
 	<ListView
-		android:id="@+id/android:list"
+		android:id="@android:id/list"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 	/>
+	
+    <TextView android:id="@id/android:empty"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:text="@string/empty_model_list"/>
 </RelativeLayout>
