--- a/res/layout/new_game_session.xml
+++ b/res/layout/new_game_session.xml
@@ -2,7 +2,7 @@
 <RelativeLayout android:id="@+id/parent"
 	android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
 <LinearLayout android:id="@+id/sessionRow" 
-	android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@+id/etGameName">
+	android:layout_width="fill_parent" android:layout_height="wrap_content" >
 	<TextView
 		android:id="@+id/tvGameNameLabel"
 		android:text="Session/Game Name"
@@ -15,90 +15,30 @@
 		android:layout_width="0dp" 
 		android:layout_height="wrap_content" 
 		android:layout_weight="1"
-		android:layout_toRightOf="@+id/tvGameNameLabel"
 	/>
 </LinearLayout>
-<LinearLayout android:id="@+id/row1" 
-	android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@+id/sessionRow">
-	<EditText android:text="Player 1" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"/>
-	<Button android:text="Remove" android:layout_width="wrap_content" android:layout_height="wrap_content" android:onClick="removeOnClick"/>
-</LinearLayout>
-<LinearLayout android:id="@+id/row2"
-	android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@+id/row1">
-	<EditText android:text="Player 2" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"/>
-	<Button android:text="Remove" android:layout_width="wrap_content" android:layout_height="wrap_content" android:onClick="removeOnClick"/>
-</LinearLayout>
-<LinearLayout android:id="@+id/row3"
-	android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@+id/row2">
-	<EditText android:text="Player 3" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"/>
-	<Button android:text="Remove" android:layout_width="wrap_content" android:layout_height="wrap_content" android:onClick="removeOnClick"/>
-</LinearLayout>
-<LinearLayout android:id="@+id/row4"
-	android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@+id/row3">
-	<EditText android:text="Player 4" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"/>
-	<Button android:text="Remove" android:layout_width="wrap_content" android:layout_height="wrap_content" android:onClick="removeOnClick"/>/>
-</LinearLayout>
-<LinearLayout android:id="@+id/row5"
-	android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@+id/row4">
-	<EditText android:text="Player 5" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"/>
-	<Button android:text="Remove" android:layout_width="wrap_content" android:layout_height="wrap_content" android:onClick="removeOnClick"/>
-</LinearLayout>
-	<Button 
-		android:text="Done"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_centerVertical="true"
-		android:layout_below="@+id/row5"
-		android:onClick="doneOnClick"
-	/>
+
+<Spinner
+    android:id="@+id/storableSpinner"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_below="@+id/sessionRow"
+/>
+
+<Button
+    android:id="@+id/addPlyrBtn"
+    android:text="@string/add_model_button_text"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_below="@+id/sessionRow"
+    android:layout_toRightOf="@+id/storableSpinner"
+/>  
+
+<ListView
+    android:id="@android:id/list"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_below="@+id/addPlyrBtn"
+/>
+
 </RelativeLayout>
-<!-- Icons found at http://openiconlibrary.sourceforge.net/ -->
-<!--	
-  <LinearLayout 
-android:layout_width="fill_parent"
-android:layout_height="fill_parent"
-xmlns:android="http://schemas.android.com/apk/res/android"
->
-
-<TextView
-android:text="Default Label Text"
-android:id="@+id/tvLabel"
-android:layout_width="wrap_content"
-android:layout_height="wrap_content"
->
-</TextView>
-
-<EditText
-	android:text="Player 1"
-	android:id="@+id/editField"
-	android:layout_width="0dp"
-	android:layout_height="wrap_content"
-	android:layout_weight="1"
->
-</EditText>
-<Button
-	android:text="Remove"
-	android:id="@+id/remove_btn"
-	android:layout_width="wrap_content"
-	android:layout_height="wrap_content" 
->
-</Button>
-
-<Button
-android:id="@+id/minus"
-android:layout_width="wrap_content"
-android:layout_height="wrap_content"
-android:background="@drawable/minus"
->
-</Button>
-<Button
-android:id="@+id/plus"
-android:layout_width="wrap_content"
-android:layout_height="wrap_content"
-android:background="@drawable/plus" 
->
-</Button>
-
-</LinearLayout>
-
-	-->
